Updated README for development from Windows (MSYS2)
The zephyrproject and sdk folders were moved and this project is checked
out in a different location than original and re-did all as per the
README file and it built the binary is tested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.20.0)
+#set(CMAKE_VERBOSE_MAKEFILE ON)
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(autosar_os)
+
 
 target_sources(app PRIVATE src/main.c)
