--- a/prj.conf
+++ b/prj.conf
@@ -35,3 +35,11 @@ CONFIG_USB_MAX_POWER=125
 
 # Logging
 CONFIG_LOG=y
+
+
+# Configs while integrating threads
+# CONFIG_SMP=y
+# CONFIG_THREAD_MONITOR=n
+# CONFIG_ZERO_LATENCY_LEVELS=2
+# CONFIG_MP_NUM_CPUS=1
+
