AUTOSAR tasks are scheduled as Zephyr's thread, now.

--- a/prj.conf
+++ b/prj.conf
@@ -2,7 +2,18 @@
 CONFIG_GPIO=y
 
 
+# Logging
+# =======
+CONFIG_LOG=y
 
+# # Logging over UART
+# #------------------
+# CONFIG_LOG_BACKEND_UART=y
+# CONFIG_UART_CONSOLE=y
+# CONFIG_LOG_BACKEND_RTT=n
+
+# Logging over USB
+#-----------------
 # Enable USB stack
 CONFIG_USB_DEVICE_STACK=y
 
@@ -33,13 +44,10 @@ CONFIG_USB_MAX_POWER=125
 
 
 
-# Logging
-CONFIG_LOG=y
-
-
 # Configs while integrating threads
+CONFIG_USERSPACE=y
 # CONFIG_SMP=y
-# CONFIG_THREAD_MONITOR=n
+CONFIG_THREAD_MONITOR=y
 # CONFIG_ZERO_LATENCY_LEVELS=2
 # CONFIG_MP_NUM_CPUS=1
 
