--- a/prj.conf
+++ b/prj.conf
@@ -2,9 +2,15 @@
 CONFIG_GPIO=y
 
 
-# Logging
+# Logging - refer zephyrproject: samples/subsys/usb/console
 # =======
 CONFIG_LOG=y
+CONFIG_SERIAL=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_STDOUT_CONSOLE=y
+CONFIG_USBD_LOG_LEVEL_WRN=y
+CONFIG_UDC_DRIVER_LOG_LEVEL_WRN=y
+
 
 # # Logging over UART
 # #------------------
@@ -16,9 +22,12 @@ CONFIG_LOG=y
 #-----------------
 # Enable USB stack
 CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_STACK_NEXT=y
 
 # Enable USB Initialize at boot
 CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
+CONFIG_USB_CDC_ACM=y
+# CONFIG_USBD_CDC_ACM_CLASS=y
 
 # USB device descriptors
 CONFIG_USB_DEVICE_VID=0x2e8a
@@ -44,8 +53,9 @@ CONFIG_USB_MAX_POWER=125
 
 
 
+
 # Configs while integrating threads
-CONFIG_USERSPACE=y
+# CONFIG_USERSPACE=y
 # CONFIG_SMP=y
 CONFIG_THREAD_MONITOR=y
 # CONFIG_ZERO_LATENCY_LEVELS=2
