Os Alarm fix and untested UART0 console changes
UART0 console changes will be tested later.

--- a/prj.conf
+++ b/prj.conf
@@ -6,28 +6,28 @@ CONFIG_GPIO=y
 # =======
 CONFIG_LOG=y
 CONFIG_SERIAL=y
+
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 CONFIG_UART_LINE_CTRL=y
-CONFIG_STDOUT_CONSOLE=y
-CONFIG_USBD_LOG_LEVEL_WRN=y
-CONFIG_UDC_DRIVER_LOG_LEVEL_WRN=y
 
 
 # # Logging over UART
 # #------------------
-# CONFIG_LOG_BACKEND_UART=y
-# CONFIG_UART_CONSOLE=y
-# CONFIG_LOG_BACKEND_RTT=n
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_UART_CONSOLE=y
+CONFIG_LOG_BACKEND_RTT=n
 
 # Logging over USB
 #-----------------
 # Enable USB stack
 CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_STACK_NEXT=y
+# CONFIG_USB_DEVICE_STACK_NEXT=y
 
 # Enable USB Initialize at boot
 CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
 CONFIG_USB_CDC_ACM=y
-# CONFIG_USBD_CDC_ACM_CLASS=y
+CONFIG_USBD_CDC_ACM_CLASS=y
 
 # USB device descriptors
 CONFIG_USB_DEVICE_VID=0x2e8a
@@ -49,7 +49,7 @@ CONFIG_USB_SELF_POWERED=n
 # Set to "1" (2 mA) for the PicoDRO hardware
 
 # Maximum power consumption in 2 mA units
-CONFIG_USB_MAX_POWER=125
+# CONFIG_USB_MAX_POWER=125
 
 
 
