Log messages will now route via UART0 of rpi_pico

--- a/prj.conf
+++ b/prj.conf
@@ -5,11 +5,6 @@ CONFIG_GPIO=y
 # Logging - refer zephyrproject: samples/subsys/usb/console
 # =======
 CONFIG_LOG=y
-CONFIG_SERIAL=y
-
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_UART_LINE_CTRL=y
 
 
 # # Logging over UART
@@ -18,38 +13,39 @@ CONFIG_LOG_BACKEND_UART=y
 CONFIG_UART_CONSOLE=y
 CONFIG_LOG_BACKEND_RTT=n
 
-# Logging over USB
-#-----------------
-# Enable USB stack
-CONFIG_USB_DEVICE_STACK=y
-# CONFIG_USB_DEVICE_STACK_NEXT=y
 
-# Enable USB Initialize at boot
-CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
-CONFIG_USB_CDC_ACM=y
-CONFIG_USBD_CDC_ACM_CLASS=y
+# # Logging over USB
+# #-----------------
+# # Enable USB stack
+# CONFIG_USB_DEVICE_STACK=y
+# # CONFIG_USB_DEVICE_STACK_NEXT=y
 
-# USB device descriptors
-CONFIG_USB_DEVICE_VID=0x2e8a
-CONFIG_USB_DEVICE_PID=0x000a
-CONFIG_USB_DEVICE_PRODUCT="Pico"
-CONFIG_USB_DEVICE_MANUFACTURER="Raspberry Pi"
+# # Enable USB Initialize at boot
+# CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
+# CONFIG_USB_CDC_ACM=y
+# CONFIG_USBD_CDC_ACM_CLASS=y
 
-# USB configuration descriptors
-# To avoid draining the tablet's battery. PicoDRO is designed as a self-powered USB device.
-# To do so, D1 is removed from the Raspberry Pi Pico and power is supplied from the VSYS pin.
-# That's why, when using the PicoDRO hardware, it should be set as a self-powered USB device.
+# # USB device descriptors
+# CONFIG_USB_DEVICE_VID=0x2e8a
+# CONFIG_USB_DEVICE_PID=0x000a
+# CONFIG_USB_DEVICE_PRODUCT="Pico"
+# CONFIG_USB_DEVICE_MANUFACTURER="Raspberry Pi"
 
-# Set to "n" for bus-powered devices (powered from the USB host) like the Raspberry Pi Pico.
-# Set to "y" for self-powered devices (powered from an external power supply) like PicoDRO hardware.
-CONFIG_USB_SELF_POWERED=n
+# # USB configuration descriptors
+# # To avoid draining the tablet's battery. PicoDRO is designed as a self-powered USB device.
+# # To do so, D1 is removed from the Raspberry Pi Pico and power is supplied from the VSYS pin.
+# # That's why, when using the PicoDRO hardware, it should be set as a self-powered USB device.
 
-# Depending on your hardware Maximum power consumption needs to be set.
-# Set to "125" (250 mA) for the Raspberry Pi Pico (if there is no other external circuitry).
-# Set to "1" (2 mA) for the PicoDRO hardware
+# # Set to "n" for bus-powered devices (powered from the USB host) like the Raspberry Pi Pico.
+# # Set to "y" for self-powered devices (powered from an external power supply) like PicoDRO hardware.
+# CONFIG_USB_SELF_POWERED=n
 
-# Maximum power consumption in 2 mA units
-# CONFIG_USB_MAX_POWER=125
+# # Depending on your hardware Maximum power consumption needs to be set.
+# # Set to "125" (250 mA) for the Raspberry Pi Pico (if there is no other external circuitry).
+# # Set to "1" (2 mA) for the PicoDRO hardware
+
+# # Maximum power consumption in 2 mA units
+# # CONFIG_USB_MAX_POWER=125
 
 
 
