--- a/prj.conf
+++ b/prj.conf
@@ -14,46 +14,13 @@ CONFIG_UART_CONSOLE=y
 CONFIG_LOG_BACKEND_RTT=n
 
 
-# # Logging over USB
-# #-----------------
-# # Enable USB stack
-# CONFIG_USB_DEVICE_STACK=y
-# # CONFIG_USB_DEVICE_STACK_NEXT=y
-
-# # Enable USB Initialize at boot
-# CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
-# CONFIG_USB_CDC_ACM=y
-# CONFIG_USBD_CDC_ACM_CLASS=y
-
-# # USB device descriptors
-# CONFIG_USB_DEVICE_VID=0x2e8a
-# CONFIG_USB_DEVICE_PID=0x000a
-# CONFIG_USB_DEVICE_PRODUCT="Pico"
-# CONFIG_USB_DEVICE_MANUFACTURER="Raspberry Pi"
-
-# # USB configuration descriptors
-# # To avoid draining the tablet's battery. PicoDRO is designed as a self-powered USB device.
-# # To do so, D1 is removed from the Raspberry Pi Pico and power is supplied from the VSYS pin.
-# # That's why, when using the PicoDRO hardware, it should be set as a self-powered USB device.
-
-# # Set to "n" for bus-powered devices (powered from the USB host) like the Raspberry Pi Pico.
-# # Set to "y" for self-powered devices (powered from an external power supply) like PicoDRO hardware.
-# CONFIG_USB_SELF_POWERED=n
-
-# # Depending on your hardware Maximum power consumption needs to be set.
-# # Set to "125" (250 mA) for the Raspberry Pi Pico (if there is no other external circuitry).
-# # Set to "1" (2 mA) for the PicoDRO hardware
-
-# # Maximum power consumption in 2 mA units
-# # CONFIG_USB_MAX_POWER=125
-
-
-
 
 # Configs while integrating threads
-# CONFIG_USERSPACE=y
-# CONFIG_SMP=y
+# #-----------------
 CONFIG_THREAD_MONITOR=y
-# CONFIG_ZERO_LATENCY_LEVELS=2
-# CONFIG_MP_NUM_CPUS=1
 
+
+
+# SPI integration
+# #-----------------
+CONFIG_SPI=y
