--- a/prj.conf
+++ b/prj.conf
@@ -5,6 +5,7 @@ CONFIG_GPIO=y
 # Logging - refer zephyrproject: samples/subsys/usb/console
 # =======
 CONFIG_LOG=y
+CONFIG_LOG_BUFFER_SIZE=16384
 
 
 # # Logging over UART
