--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
 	"files.associations": {
 		"*.JLinkScript": "c",
-		"gpio.h": "c"
+		"gpio.h": "c",
+		"charconv": "c",
+		"cstdint": "cpp",
+		"tcpip_extensions.h": "c",
+		"string.h": "c"
 	}
 }
