Stopping SoAd and starting Stellar porting.
The SoAd and DoIP work package will be continued after doing the Stellar
board porting work is done.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
 		"charconv": "c",
 		"cstdint": "cpp",
 		"tcpip_extensions.h": "c",
-		"string.h": "c"
+		"string.h": "c",
+		"log.h": "c",
+		"tcpip.h": "c"
 	}
 }
